// Определение gRPC-сервиса ProductInfo с помощью Protocol Buffers

// Определение сервиса начинается с указания версии Protocol Buffers (proto3)
syntax = "proto3";

// Имена пакетов позволяют предотвратить конфликты имен между типами сообщений
// и также применяются для генерации кода.
package example1;

// Определение интерфейса gRPC-сервиса
service ProductInfo {
  // Удаленные метод для добавления товара, который возвращает ID этого
  // товара в качестве ответа
  rpc addProduct(Product) returns (ProductID);
  // Удаленный метод для получения товара по его ID
  rpc getProduct(ProductID) returns (Product);
}

// Определение формата/типа сообщений Product
message Product {
  // Поле(пара "имя - значение"), хранящее ID товара. Обладает уникальным номером,
  // с помощью которого его можно идентифицировать в двоичном формате сообщений.
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

// Пользовательский тип для идентификационного номера товара.
message ProductID {
  string value = 1;
}